Revert "fixed: tag z-index in coupon"
This reverts commit f178f18c81eff4756fb2925c9495ccb45c9ad312.

--- a/sass/components/_coupon.scss
+++ b/sass/components/_coupon.scss
@@ -423,7 +423,6 @@ h1+.coupon {
 	// }
 	.tag {
 		position: absolute;
-		z-index: 1;
 		right: -2px;
 		bottom: -2px;
 
